--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aws_lambda_bundler"
-dynamic = ["version"]
-description = ''
+version = "0.1.0"
+description = 'utility to build zip archives to run AWS Lambda functions'
 readme = "README.md"
 requires-python = ">=3.8"
 license = {file = "MIT"}
