--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{39,310,311,312},pre-commit
+envlist = py{39,310,311,312},pre-commit,release
 
 [testenv]
 deps = -rrequirements-dev.txt
@@ -10,3 +10,10 @@ skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
 
+[testenv:release]
+skip_install = true
+deps = 
+    gitpython
+    packaging
+    towncrier
+commands = python tasks/release.py --version {posargs}
